--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.3.1",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
